...
            <objects>
                <viewController storyboardIdentifier="SubscriptionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="SubscriptionViewController" customModule="Mantra" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If You want to see all material click on 'Pay with Pay'" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO"
                                <rect key="frame" x="20" y="384.5" width="374" height="62.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2C-8g-vej">
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <state key="normal" title="Button" image="123"/>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfH-lS-ziy">
                                <rect key="frame" x="10" y="655" width="394" height="47"/>
                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                <state key="normal" title="Join to the World of Mantra">
                                    <color key="titleColor" systemColor="systemYellowColor"/>
                                </state>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="O7b-rB-g3x"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
            <point key="canvasLocation" x="1164" y="92"/>
        </scene>
        <!--Mantras-->
        <scene sceneID="cBN-4I-RQo">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tts-oI-Hbv" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Mantras" image="Icon-App-60x60" id="paZ-0t-keR">
                        <inset key="imageInsets" minX="0.0" minY="-31" maxX="0.0" maxY="0.0"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Q3X-qp-QYa">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
...
            <point key="canvasLocation" x="1928.985507246377" y="519.64285714285711"/>
        </scene>
        <!--Questions-->
        <scene sceneID="PJT-zU-f0k">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="CuO-Y8-FeZ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Questions" image="questionmark.circle.fill" catalog="system" id="ZGg-Q0-jRq"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Suc-nW-Nrp">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="4499" y="90"/>
        </scene>
        <!--Subscription-->
        <scene sceneID="x7K-SM-lny">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EBD-h7-0sk" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Subscription" image="person.circle.fill" catalog="system" id="5Nm-6X-c1o"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SCQ-ie-t81">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
