...
//  Created by Karaimchuk on 27.09.21.
//

import Foundation

class QuestionsModel {
  public let questionArr = ["What is a mantra?",
                            "What is the power of a mantra?",
                            "List of mantras",
                            "What is the OM Mantra",
                            "What does the word mantra mean?",
                            "How often should mantras be recited?",
                            "How to recite mantras on a rosary?",
                            "How to quickly start meditating?",
...
