...
    "Om Sat Chit Ananda Parabrahma\nPurushotama Paramathama\nSri Bhagavati Samitha\nSri Bhagavate Namaha\nOm, I worship the all-pervading being, pure consciousness, bliss, the creator of the universe, the material form of the divine, the immaterial form of the divine, the feminine principle in union with the masculine principle, I worship the entire universe.\nThis mantra for negativity is so powe
    "Hare Krishna Hare Krishna\nKrishna Krishna Hare Hare\nHare Rama Hare Rama\nRama Rama Hare Hare\nDelusional, all-attractive, all-pleasing, let me serve you.\nThe main mantra of the Hare Krishnas. The Mahamantra stops endless internal dialogue, calms the mind, opens the heart and allows divine light to permeate the body"
  ]
  
  public let mantraImageArr = ["Mantra-Om", "Gayatri-mantra", "Mantra-Ganeshi", "Guru-mantra", "Mantra-bogatstva", "Mantra-ochishcheniya", "mantra-lyubvi", "Mantra-zdorovya", "Mantra-energii-i-sily", "Mantra-Zelenoy-Tary", "Mula-mantra", "Makhamantra-Khare-Krishna"]
  
  public let mantraTitleArr = ["Mantra Om", "Gayatri Mantra", "Mantra of Ganesha", "Guru mantra or healing mantra", "The mantra of wealth and money", "Mantra of Purification", "Mantra of love", "Mantra of health", "Mantra of energy and strength", "Mantra of Green Tara", "Mula mantra or mantra for getting rid of negativity", "Mahamantra Hare Krishna"]
}

